bittrex exchange is added to frontend

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -13,6 +13,7 @@
           <tr>
             <th scope="col">Ticker</th>
             <th scope="col">Binance</th>
+            <th scope="col">Bittrex</th>
           </tr>
         </thead>
 
@@ -20,7 +21,8 @@
             <tbody>
               <tr>
                 <th scope="row">@tickerName</th>
-                <td id="@tickerName">N/A</td>
+                <td id="Binance-@tickerName">N/A</td>
+                <td id="Bittrex-@tickerName">N/A</td>
               </tr>
             </tbody>
         }
