change index page name

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(webSocketUrl: String, tickers: List[String])(implicit webJarsUtil: org.webjars.play.WebJarsUtil)
 
-@main("Welcome to Play") {
+@main("Live Coin Prices") {
   <div class="wrap">
     <div class="container-fluid">
       <div>
