add hitbtc exchange

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -14,6 +14,7 @@
             <th scope="col">Ticker</th>
             <th scope="col">Binance</th>
             <th scope="col">Bittrex</th>
+            <th scope="col">HitBTC</th>
           </tr>
         </thead>
         <tbody>
@@ -22,6 +23,7 @@
               <th scope="row">@tickerName</th>
               <td id="Binance-@tickerName">N/A</td>
               <td id="Bittrex-@tickerName">N/A</td>
+              <td id="HitBTC-@tickerName">N/A</td>
             </tr>
           }
         </tbody>
